--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		shadow to the title */
 		#title {
 			text-align: center;
-			text-shadow: 5px 5px 10px white;
+			/* text-shadow: 5px 5px 10px white; */
 			font-size: 7vh;
 		}
 
@@ -37,7 +37,7 @@
 		padding, font-size, font color etc.*/
 		div#tribute-data {
 			background-color: rgb(46, 139, 87, 0.25);
-			box-shadow: 20px 20px 20px #98FB98;
+			/* box-shadow: 20px 20px 20px #98FB98; */
 			font-family: Georgia;
 			padding: 25px 25px;
 			margin: 11px;
